third_party/move/move-compiler-v2/tests/file-format-generator/bug_17477.opt.exp

Diagnostics:
error: Invalid operation: pack on `m::S` can only be done within module `0xc0ffee::m`
   ┌─ tests/file-format-generator/bug_17477.move:10:16
   │
10 │     public fun test1() {
   │                ^^^^^
11 │         spec {};
12 │         let _ = S { x: 42 };
   │                 ----------- pack here
